# dq-accelerator

./: .cursorrules  .gitignore  Makefile  PROJECT_SUMMARY.md  README.md  data_quality_accelerator_design.md  pyproject.toml  requirements.txt
config/: databricks_workflow_config.yaml  dev.yaml  prod.yaml  staging.yaml
docs/: architecture.md  getting_started.md
dq_accelerator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
scripts/: deploy_databricks_workflows.py
src/: __init__.py
src/dq_runner/: __init__.py  databricks_runner.py  runner.py
src/dq_runner/engines/: __init__.py  soda_engine.py  sql_engine.py
src/integrations/: databricks_workflow.py
src/jobs/: __init__.py  databricks_job_entries.py  databricks_jobs.py
src/libraries/: __init__.py
src/libraries/dq_runner/: __init__.py  databricks_runner.py
src/libraries/dq_runner/engines/: soda_engine.py  sql_engine.py
src/libraries/integrations/: databricks_workflow.py
src/libraries/utils/: metrics_jobs.py  metrics_mart_populator.py  notifier.py  watermark_manager.py
src/libraries/validation/: __init__.py  compliance_checker.py
src/notebooks/: __init__.py
src/schemas/: __init__.py  dq_rule_schema.json
src/schemas/examples/: complete_workflow_example.py  customers_rules.yaml  databricks_simple_example.py  environment_aware_example.py  incremental_processing_example.py  payments_advanced_rules.yaml  payments_basic_rules.yaml  payments_rules.yaml  sample_config.yaml  watermark_usage_example.py
src/sql/: __init__.py  dq_metrics_mart.sql  dq_results.sql  dq_watermarks.sql
src/utils/: __init__.py  watermark_manager.py
tests/: __init__.py
tests/unit/: test_dq_runner.py  test_watermark_manager.py
